--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  build-and-scan:
+  security:
     runs-on: ubuntu-latest
 
     steps:
@@ -18,7 +18,7 @@ jobs:
       with:
         python-version: '3.10'
 
-    - name: Install Bandit
+    - name: Install Bandit (SAST)
       run: |
         pip install bandit
 
@@ -29,3 +29,17 @@ jobs:
     - name: Build Docker image
       run: |
         docker build -t devsecops-test .
+
+    - name: Run application container
+      run: |
+        docker run -d -p 5000:5000 --name app devsecops-test
+        sleep 10
+
+    - name: OWASP ZAP DAST scan
+      uses: zaproxy/action-baseline@v0.10.0
+      with:
+        target: http://localhost:5000
+
+    - name: Stop container
+      run: |
+        docker stop app
