--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,6 @@ jobs:
       run: |
         bandit -r . --severity-level high
 
-
     - name: Build Docker image
       run: |
         docker build -t devsecops-test .
@@ -34,14 +33,7 @@ jobs:
     - name: Run application container
       run: |
         docker run -d -p 5000:5000 --name app devsecops-test
-        sleep 10
-
-    - name: Start Flask App
-      run: |
-      pip install -r requirements.txt
-      python app.py &
-      sleep 10
-
+        sleep 15
 
     - name: OWASP ZAP DAST scan
       uses: zaproxy/action-baseline@v0.10.0
@@ -49,5 +41,6 @@ jobs:
         target: http://localhost:5000
 
     - name: Stop container
+      if: always()
       run: |
         docker stop app
