--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,29 +18,19 @@ jobs:
       with:
         python-version: '3.10'
 
-    - name: Install Bandit (SAST)
-      run: |
-        pip install bandit
+    - name: Install Bandit
+      run: pip install bandit
 
     - name: Run Bandit SAST
-      run: |
-        bandit -r . --severity-level high
+      run: bandit -r . --severity-level high
 
-    - name: Build Docker image
+    - name: Build and run containers
       run: |
-        docker build -t devsecops-test .
+        docker compose up -d
+        sleep 20
 
-    - name: Run application container
-      run: |
-        docker run -d -p 5000:5000 --name app devsecops-test
-        sleep 15
+    - name: Run OWASP ZAP DAST
+      run: docker compose run zap
 
-    - name: OWASP ZAP DAST scan
-      uses: zaproxy/action-baseline@v0.10.0
-      with:
-        target: http://localhost:5000
-
-    - name: Stop container
-      if: always()
-      run: |
-        docker stop app
+    - name: Stop containers
+      run: docker compose down
