Fix app startup and DAST connectivity3

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,3 +12,8 @@ services:
     depends_on:
       - app
     command: zap-baseline.py -t http://app:5000
+
+command: >
+  zap-baseline.py
+  -t http://app:5000
+  -I
