Fix app startup and DAST connectivity4

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.8"
+
 
 services:
   app:
@@ -11,9 +11,6 @@ services:
     image: ghcr.io/zaproxy/zaproxy:stable
     depends_on:
       - app
-    command: zap-baseline.py -t http://app:5000
+    command: zap-baseline.py -t http://app:5000 -I
 
-command: >
-  zap-baseline.py
-  -t http://app:5000
-  -I
+
